mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/impl_inner.stderr
error: use of deprecated associated function `Struct::get_random_number`
  --> tests/failing_no_mass_cfg_attr/impl_inner.rs:17:13
   |
17 |     Struct::get_random_number();
   |             ^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/impl_inner.rs:1:26
   |
1  | #![deny(unused_must_use, deprecated)]
   |                          ^^^^^^^^^^

error: unused return value of `Struct::get_random_number` that must be used
  --> tests/failing_no_mass_cfg_attr/impl_inner.rs:17:5
   |
17 |     Struct::get_random_number();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/impl_inner.rs:1:9
   |
1  | #![deny(unused_must_use, deprecated)]
   |         ^^^^^^^^^^^^^^^
